syntax = "proto3";

package ai.lzy.v1.channel;

import "ai/lzy/v1/common/data-scheme.proto";
import "ai/lzy/v1/common/slot.proto";

option java_outer_classname = "LCM";
option java_package = "ai.lzy.v1.channel";

message Channel {
  string channelId = 1;
  ChannelSpec spec = 2;
  string executionId = 3;
  ChannelSenders senders  = 4;
  ChannelReceivers receivers = 5;
}

message ChannelSpec {
  string channelName = 1;
  ai.lzy.v1.common.DataScheme scheme = 2;
}

message ChannelSenders {
  /* optional */ ai.lzy.v1.common.SlotInstance workerSlot = 1;
  /* optional */ ai.lzy.v1.common.SlotInstance portalSlot = 2;
}

message ChannelReceivers {
  repeated ai.lzy.v1.common.SlotInstance workerSlots = 1;
  /* optional */ ai.lzy.v1.common.SlotInstance portalSlot = 2;
}
